--- a/styles/scss/_basics.scss
+++ b/styles/scss/_basics.scss
@@ -23,7 +23,7 @@ ol {
 }
 
 .container {
-    width: 1140px;
+    max-width: 1140px;
     margin: 0 auto;
 }
 
@@ -43,6 +43,13 @@ ol {
         padding: 60px 0;
     }
 }
+.heading.content--left {
+    & .heading__body {
+        display: flex;
+        justify-content: left;
+    }
+}
+
 input[type="number"] {
     -moz-appearance: textfield;
     -webkit-appearance: textfield;
