--- a/styles/scss/cart/_filters.scss
+++ b/styles/scss/cart/_filters.scss
@@ -21,6 +21,8 @@
             }
 
             & svg {
+                width: 15px;
+                height: 10px;
                 fill: #000;
                 margin-left: 11px;
             }
