--- a/styles/scss/cart/_slider.scss
+++ b/styles/scss/cart/_slider.scss
@@ -2,8 +2,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 777px;
+    padding: 11px 0;
     background-color: #F7F7F7; 
+
+    & .container {
+        padding: 0 150px;
+    }
+
+    &__img {
+        min-width: 466px;
+        width: 100%;
+
+        & img {
+            width: 100%;
+        }
+    }
 
     & .nav {
         position: absolute;
