--- a/styles/scss/_hiro.scss
+++ b/styles/scss/_hiro.scss
@@ -1,9 +1,24 @@
 .hiro {
     background-color: #F1E4E6;
-    height: 764px;
+    max-height: 764px;
+    min-height: 367px;
+    padding: 0;
 
     &__body {
         @include box-flex;
+    }
+
+    &__img {
+        min-width: 386px;
+        display: flex;
+        justify-content: center;
+        padding: 0 90px 0 110px;
+        margin-right: 40px;
+
+        & img {
+            min-width: 180px;
+            max-width: 100%;
+        }
     }
 
     &__heading {
@@ -15,3 +30,4 @@
         }
     }
 }
+
