--- a/styles/scss/_inCart.scss
+++ b/styles/scss/_inCart.scss
@@ -6,6 +6,9 @@
     }
 
     &__goods {
+        max-width: 850px;
+        width: 100%;
+        
         &__item {
             position: relative;
             width: 650px;
