--- a/styles/scss/_main.scss
+++ b/styles/scss/_main.scss
@@ -2,6 +2,21 @@
     position: relative;
 
      &__menu {
+        //  scroll
+        &::-webkit-scrollbar {
+            width: 10px; 
+            background-color: #F8F8F8;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-color: #dfa1a9cb;
+            border-radius: 9em;
+            box-shadow: inset 1px 1px 10px rgba(243, 178, 205, 0.89);
+        }
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #F16D7F;
+        }
+        // ----------------------------------------------------
+
         display: none;
         width: 232px;
         height: 764px;
@@ -10,7 +25,10 @@
         top: 0;
         right: 0;
         background-color: #fff;
-        box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+        -webkit-box-shadow: -13px 18px 39px -13px rgba(200, 48, 210, 0.2);
+        -moz-box-shadow: -13px 18px 39px -13px rgba(200, 48, 210, 0.2);
+        box-shadow: -13px 18px 39px -13px rgba(200, 48, 210, 0.2);
+        z-index: 1;
 
         & .close {
             display: block;
